tests/negative/regression/r21.orng
// 
//
fn lol() -> Int {
    while true {}
    4
}

fn main() -> Int {
    const x = comptime { lol() }
    x
} 
